--- a/browser/js/templates/sequencer.html
+++ b/browser/js/templates/sequencer.html
@@ -1,3 +1,4 @@
+<h3 id='title'>{{part}}</h3>
 <canvas nx="matrix" id="matrix{{part}}">
 </canvas>
 <button type="button" class="btn btn-success" ng-click="addRow()">Add Note</button>
