--- a/browser/js/templates/sequencer.html
+++ b/browser/js/templates/sequencer.html
@@ -1,8 +1,8 @@
 <h3 id='title'>{{part}}</h3>
 <div class='col-xs-2'>
 	<div ng-repeat="input in notesInputs track by $index">
-		<select ng-options="note as note for note in noteOptions" ng-model="noteSelected" ng-change="selectedANote({{$index}}, noteSelected)"></select>
-		<input name='option' type='number' min='1' max='5' ng-model="optionSelected" ng-change="selectedAnOption({{$index}}, optionSelected)"></input>
+		<select class='col-xs-8' ng-options="note as note for note in noteOptions" ng-model="noteSelected" ng-change="selectedANote({{$index}}, noteSelected)"></select>
+		<input  class='col-xs-4' name='option' type='number' min='1' max='5' ng-model="optionSelected" ng-change="selectedAnOption({{$index}}, optionSelected)"></input>
 		<h6>{{noteSelected}}{{optionSelected}}</h6>
 	</div>
 </div>
